# blank_blog

./: .gitignore  ok.html  package-lock.json  pyproject.toml  requirements.txt
apps/blog/: admin.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/blog/templates/blog/: blogpost_details.html  blogpost_list.html  index.html
apps/blog/templates/blog/components/: blog-card-list.html
apps/blog/templatetags/: markdown_extras.py
apps/category/: admin.py  models.py
apps/category/migrations/: 0001_initial.py
apps/frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
apps/frontend/src/scripts/: main.ts
apps/frontend/templates/frontend/: base.html
apps/frontend/templates/frontend/components/navbar/: index.html  navbar.html  navitem.html
apps/tag/: admin.py  models.py
apps/tag/migrations/: 0001_initial.py
config/: settings.py  urls.py
